[gd_scene load_steps=11 format=3 uid="uid://bv178gt3okdq"]

[ext_resource type="Script" uid="uid://bgmavv7j5xy2o" path="res://Scripts/gameplay.gd" id="1_aod76"]
[ext_resource type="Texture2D" uid="uid://4y85hlkhek6i" path="res://Assets/personaje.png" id="2_4u0gh"]
[ext_resource type="Texture2D" uid="uid://dg8n1h0k0kyuc" path="res://Assets/galera_color.png" id="3_cowoy"]
[ext_resource type="Texture2D" uid="uid://5cmhpkaghmg2" path="res://Assets/Fondo Armado_Placeholder.png" id="3_y3e6i"]
[ext_resource type="Texture2D" uid="uid://b6hb313qgvejv" path="res://Assets/galera_gris.png" id="4_4u0gh"]
[ext_resource type="Texture2D" uid="uid://bfjvxqmgi27rh" path="res://Assets/varita_color.png" id="5_cowoy"]
[ext_resource type="Texture2D" uid="uid://cgtlls3a2f1r8" path="res://Assets/varita_gris.png" id="6_4u0gh"]
[ext_resource type="Texture2D" uid="uid://b1ngbmsb1785c" path="res://Assets/capa_color.png" id="7_y3e6i"]
[ext_resource type="Texture2D" uid="uid://dj5xtnqkl3a4c" path="res://Assets/capa_gris.png" id="8_cowoy"]
[ext_resource type="Texture2D" uid="uid://b6wdeujn8ocd0" path="res://Assets/life_icon.png" id="8_suyv4"]

[node name="gameplay" type="Node2D"]
position = Vector2(300, 230)
script = ExtResource("1_aod76")

[node name="Cuerpo" type="Sprite2D" parent="."]
position = Vector2(1190, 340)
scale = Vector2(0.71427715, 0.71427715)
texture = ExtResource("2_4u0gh")

[node name="fondoArmado" type="Sprite2D" parent="."]
position = Vector2(938, 264)
texture = ExtResource("3_y3e6i")

[node name="galeraColor" type="Sprite2D" parent="."]
position = Vector2(679.99994, 469.99994)
rotation = 2.5045295
scale = Vector2(0.7009131, 0.7009131)
texture = ExtResource("3_cowoy")

[node name="galeraGris" type="Sprite2D" parent="."]
position = Vector2(1190.0001, 80)
rotation = -0.0075304573
scale = Vector2(0.7418247, 0.73641187)
texture = ExtResource("4_4u0gh")

[node name="varitaColor" type="Sprite2D" parent="."]
position = Vector2(330, 140)
rotation = -0.2292935
scale = Vector2(0.5872747, 0.5872747)
texture = ExtResource("5_cowoy")

[node name="varitaGris" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1090, 120.00001)
scale = Vector2(0.8564851, 0.8564851)
texture = ExtResource("6_4u0gh")

[node name="capaColor" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(203.00012, 561)
rotation = 0.41519472
scale = Vector2(0.39995047, 0.39995047)
texture = ExtResource("7_y3e6i")

[node name="capaGris" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1209.9999, 410)
scale = Vector2(0.66571504, 0.66571504)
texture = ExtResource("8_cowoy")

[node name="LivesContainer" type="HBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Life1" type="Sprite2D" parent="LivesContainer"]
z_index = -1
position = Vector2(770, -49.999985)
scale = Vector2(0.2, 0.2)
texture = ExtResource("8_suyv4")

[node name="Life2" type="Sprite2D" parent="LivesContainer"]
z_index = -1
position = Vector2(858, -46.999985)
scale = Vector2(0.2, 0.2)
texture = ExtResource("8_suyv4")

[node name="Life3" type="Sprite2D" parent="LivesContainer"]
z_index = -1
position = Vector2(949, -45.999924)
scale = Vector2(0.2, 0.2)
texture = ExtResource("8_suyv4")

[node name="Life4" type="Sprite2D" parent="LivesContainer"]
z_index = -1
position = Vector2(1040, -43.999924)
scale = Vector2(0.2, 0.2)
texture = ExtResource("8_suyv4")

[node name="Life5" type="Sprite2D" parent="LivesContainer"]
z_index = -1
position = Vector2(1132, -44.999924)
scale = Vector2(0.2, 0.2)
texture = ExtResource("8_suyv4")
